Sprache teilweise hinzugefügt für MainFenster und LoginFenster

--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
@@ -13,3 +13,25 @@ menuItem.newMasterPassword=Neues Masterpasswort
 menuItem.newEntry=Neuer Eintrag
 menuItem.help=Hilfe
 menuItem.about=Info
+textField.settings.numberBackupEntries=Anzahl von Backup-Entries:
+textField.settings.lenghtRandomPasswordText=Länge Zufallspasswort:
+textField.settings.timeoutClipboardText=Zwischenablage Zeit:
+textField.settings.saveSatusText=Speicher Status:
+button.settings.numberBackupEntries= SPEICHERN
+button.settings.timeoutClipboard= SPEICHERN
+button.settings.lengthRandomPassword= SPEICHERN
+tableColumn.title=Titel
+tableColumn.username=Benutzername
+tableColumn.url=URL
+tableColumn.description=Beschreibung
+
+title.about=Über
+text.about=jPasswortBunker wurde von Marcel Eglseder, Günther Wagenhuber und Michael Kopp erstellt \n \n Copyright 2017 - 2099
+title.help=Hilfe
+text.help=Verwende Google oder frage deinen Administrator
+
+login.title=Anmelde Fenster
+login.infoText=Entsperre deinen JPasswortBunker
+login.passwordPromptText=Passwort
+login.button=Einloggen
+login.labelWrongPassword=Falsches Passwort
