--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
@@ -13,3 +13,26 @@ menuItem.newMasterPassword=New MasterPassword
 menuItem.newEntry=New Entry
 menuItem.help=Help
 menuItem.about=About
+textField.settings.numberBackupEntries=Number of Backup-Entries:
+textField.settings.lenghtRandomPasswordText=Length Random-Passwords:
+textField.settings.timeoutClipboardText=Timeout Clipboard
+textField.settings.saveSatusText=Save status:
+button.settings.numberBackupEntries= SAVE
+button.settings.timeoutClipboard= SAVE
+button.settings.lengthRandomPassword= SAVE
+tableColumn.title=Titel
+tableColumn.username=Username
+tableColumn.url=URL
+tableColumn.description=Description
+
+title.about=About
+text.about=jPasswortBunker was created by Marcel Eglseder, Günther Wagenhuber and Michael Kopp \n \n Copyright 2017 - 2099
+title.help=Help
+text.help=Use Google or ask your Administrator
+
+login.title=LoginScreen
+login.infoText=Unlock your JPasswortBunker
+login.passwordPromptText=Password
+login.button=Login
+login.labelWrongPassword=Wrong Password
+
