SpracheMainInterface und LoginFenster fertig

--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
@@ -13,6 +13,12 @@ menuItem.newMasterPassword=Neues Masterpasswort
 menuItem.newEntry=Neuer Eintrag
 menuItem.help=Hilfe
 menuItem.about=Info
+contextMenu.delete=Löschen
+contextMenu.edit=Bearbeiten
+contextMenu.copyPassword=Passwort kopieren
+alert.title=Bestätigunsfenster
+alert.headerText=Lösch Bestätigung
+alert.text=Bist du dir sicher, dass du diesen Eintrag löschen möchtest?
 textField.settings.numberBackupEntries=Anzahl von Backup-Entries:
 textField.settings.lenghtRandomPasswordText=Länge Zufallspasswort:
 textField.settings.timeoutClipboardText=Zwischenablage Zeit:
