--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
@@ -13,6 +13,12 @@ menuItem.newMasterPassword=New MasterPassword
 menuItem.newEntry=New Entry
 menuItem.help=Help
 menuItem.about=About
+contextMenu.delete=Delete
+contextMenu.edit=Edit
+contextMenu.copyPassword=Copy Password
+alert.title=Confirm Dialog
+alert.headerText=Delete Confirmation
+alert.text=Are you realy sure, that you want delete the Entry
 textField.settings.numberBackupEntries=Number of Backup-Entries:
 textField.settings.lenghtRandomPasswordText=Length Random-Passwords:
 textField.settings.timeoutClipboardText=Timeout Clipboard
