Sprache EditEntry und NewEntry fertig

--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
@@ -41,3 +41,22 @@ login.infoText=Entsperre deinen JPasswortBunker
 login.passwordPromptText=Passwort
 login.button=Einloggen
 login.labelWrongPassword=Falsches Passwort
+
+entry.promptTextFieldTitle=Titel
+entry.promptTextFieldUsername=Benutzerame
+entry.promptTextPassword1=Passwort
+entry.promptTextPassword2=Passwort wiederholen
+entry.promptTextFieldURL=URL
+entry.button.save=OK
+entry.label.descriptionText=Beschreibung
+entryNew.label.entryHead=Neuer Eintrag
+entryNew.title=Erstelle neuen Eintrag
+entry.comboBox.promptText=Kategorie ...
+entry.labelErrorMessage.passwordEquals=Passwörter nicht gleich
+entry.labelErrorMessage.setTitle=Bitte setzte einen Titel
+entry.labelErrorMessage.chooseCategorie=Bitte wähle eine Kategorie
+entryEdit.title=Bearbeite deinen bestehenden Eintrag
+entryEdit.label.entryHead=Eintrag bearbeiten
+entry.tooltip.showPassword=Passwort anzeigen
+entry.tooltip.generatePassword=Erstelle Zufallspasswort
+entry.tooltip.copyPassword=Passwort in Zwischenablage kopieren
