--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
@@ -42,3 +42,21 @@ login.passwordPromptText=Password
 login.button=Login
 login.labelWrongPassword=Wrong Password
 
+entry.promptTextFieldTitle=Title
+entry.promptTextFieldUsername=Username
+entry.promptTextPassword1=Password
+entry.promptTextPassword2=Repeat Password
+entry.promptTextFieldURL=URL
+entry.button.save=OK
+entry.label.descriptionText=Description
+entryNew.label.entryHead=New Entry
+entryNew.title=Create new Entry
+entry.comboBox.promptText=Category ...
+entry.labelErrorMessage.passwordEquals=Password not Equals
+entry.labelErrorMessage.setTitle=Please set a Title
+entry.labelErrorMessage.chooseCategorie=Please choose a categorie
+entryEdit.title=Edit your EntryProperty
+entryEdit.label.entryHead=Edit Entry
+entry.tooltip.showPassword=Show Password
+entry.tooltip.generatePassword=Generate a random Password
+entry.tooltip.copyPassword=Copy password to clipboard
