Show Password im Login eingefügt

--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
@@ -41,6 +41,7 @@ login.infoText=Entsperre deinen JPasswortBunker
 login.passwordPromptText=Passwort
 login.button=Einloggen
 login.labelWrongPassword=Falsches Passwort
+login.checkBox.showPassword=Passwort anzeigen
 
 entry.promptTextFieldTitle=Titel
 entry.promptTextFieldUsername=Benutzerame
