--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
@@ -41,6 +41,7 @@ login.infoText=Unlock your JPasswortBunker
 login.passwordPromptText=Password
 login.button=Login
 login.labelWrongPassword=Wrong Password
+login.checkBox.showPassword=Show Password
 
 entry.promptTextFieldTitle=Title
 entry.promptTextFieldUsername=Username
