Settings language eingefügt

--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
@@ -22,10 +22,15 @@ alert.text=Bist du dir sicher, dass du diesen Eintrag löschen möchtest?
 textField.settings.numberBackupEntries=Anzahl von Backup-Entries:
 textField.settings.lenghtRandomPasswordText=Länge Zufallspasswort:
 textField.settings.timeoutClipboardText=Zwischenablage Zeit:
+textField.settings.language=Sprache
 textField.settings.saveSatusText=Speicher Status:
+textField.settings.error=Fehler
+textField.settings.success=Erfolgreich
+textField.settings.saveStatus=Keine Änderungen
 button.settings.numberBackupEntries= SPEICHERN
 button.settings.timeoutClipboard= SPEICHERN
 button.settings.lengthRandomPassword= SPEICHERN
+button.settings.setLanguage= SPEICHERN
 tableColumn.title=Titel
 tableColumn.username=Benutzername
 tableColumn.url=URL
