--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
@@ -22,10 +22,15 @@ alert.text=Are you realy sure, that you want delete the Entry
 textField.settings.numberBackupEntries=Number of Backup-Entries:
 textField.settings.lenghtRandomPasswordText=Length Random-Passwords:
 textField.settings.timeoutClipboardText=Timeout Clipboard
+textField.settings.language=Languagetest
 textField.settings.saveSatusText=Save status:
+textField.settings.error=Error
+textField.settings.success=Success
+textField.settings.saveStatus=No Changes
 button.settings.numberBackupEntries= SAVE
 button.settings.timeoutClipboard= SAVE
 button.settings.lengthRandomPassword= SAVE
+button.settings.setLanguage= SAVE
 tableColumn.title=Titel
 tableColumn.username=Username
 tableColumn.url=URL
