Timestamp label added

--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
@@ -37,7 +37,7 @@ tableColumn.url=URL
 tableColumn.description=Beschreibung
 
 title.about=Über
-text.about=jPasswortBunker wurde von Marcel Eglseder, Günther Wagenhuber und Michael Kopp erstellt \n \n Copyright 2017 - 2099
+text.about=jPasswortBunker wurde von \n Marcel Eglseder, Günther Wagenhuber and Michael Kopp \nhttp://www.jpasswortbunker.org \nCopyright 2017 - 2099 
 title.help=Hilfe
 text.help=Verwende Google oder frage deinen Administrator
 
