--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
@@ -37,7 +37,7 @@ tableColumn.url=URL
 tableColumn.description=Description
 
 title.about=About
-text.about=jPasswortBunker was created by Marcel Eglseder, Günther Wagenhuber and Michael Kopp \n \n Copyright 2017 - 2099
+text.about=jPasswortBunker was created by: \n Marcel Eglseder, Günther Wagenhuber and Michael Kopp \nhttp://www.jpasswortbunker.org \nCopyright 2017 - 2099
 title.help=Help
 text.help=Use Google or ask your Administrator
 
