Getter und Setter für die Sprache hinzugefügt

--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
@@ -22,7 +22,7 @@ alert.text=Are you realy sure, that you want delete the Entry
 textField.settings.numberBackupEntries=Number of Backup-Entries:
 textField.settings.lenghtRandomPasswordText=Length Random-Passwords:
 textField.settings.timeoutClipboardText=Timeout Clipboard
-textField.settings.language=Languagetest
+textField.settings.language=Language
 textField.settings.saveSatusText=Save status:
 textField.settings.error=Error
 textField.settings.success=Success
