Menüpunkte ordentlich hingezogen, Suchfeld im Mülleimer entfernt

--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
@@ -3,7 +3,7 @@ button.social=Social
 button.email=E-Mail
 button.network=Netzwerk
 button.recycle=Recycle
-button.settings=Einstellungen
+button.settings=Optionen
 button.newEntry=Neuer Eintrag
 promptText.search=Suchen...
 menu.file=Datei
