Feld Settings im Englischen zu Options umbenannt. Einheitlich

--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
@@ -3,7 +3,7 @@ button.social=Social
 button.email=E-Mail
 button.network=Network
 button.recycle=Recycle
-button.settings=Settings
+button.settings=Options
 button.newEntry=NEW Entry
 promptText.search=Search...
 menu.file=File
