Menüpunkte angepasst, Sprache erweitert, Code bereinigt ----------------------------- FINAL!

--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
@@ -1,17 +1,15 @@
-button.finance=Finanzen
+button.finance=Finance
 button.social=Social
 button.email=E-Mail
-button.network=Netzwerk
+button.network=Others
 button.recycle=Recycle
 button.settings=Optionen
 button.newEntry=Neuer Eintrag
 promptText.search=Suchen...
 menu.file=Datei
 menu.edit=Bearbeiten
-menu.help=Hilfe
 menuItem.newMasterPassword=Neues Masterpasswort
 menuItem.newEntry=Neuer Eintrag
-menuItem.help=Hilfe
 menuItem.about=Info
 contextMenu.delete=Löschen
 contextMenu.edit=Bearbeiten
@@ -27,6 +25,7 @@ textField.settings.saveSatusText=Speicher Status:
 textField.settings.error=Fehler
 textField.settings.success=Erfolgreich
 textField.settings.saveStatus=Keine Änderungen
+textField.settings.description = Nur Zahlen 1-30
 button.settings.numberBackupEntries= SPEICHERN
 button.settings.timeoutClipboard= SPEICHERN
 button.settings.lengthRandomPassword= SPEICHERN
@@ -37,9 +36,8 @@ tableColumn.url=URL
 tableColumn.description=Beschreibung
 
 title.about=Über
-text.about=jPasswortBunker wurde von \n Marcel Eglseder, Günther Wagenhuber and Michael Kopp \nhttp://www.jpasswortbunker.org \nCopyright 2017 - 2099 
-title.help=Hilfe
-text.help=Verwende Google oder frage deinen Administrator
+text.about=jPasswortBunker wurde von \n Marcel Eglseder, Günther Wagenhuber and Michael Kopp \nhttp://www.jpasswortbunker.org \n © Copyright 2017-2018 
+
 
 login.title=Anmelde Fenster
 login.infoText=Entsperre deinen JPasswortBunker
@@ -66,3 +64,10 @@ entryEdit.label.entryHead=Eintrag bearbeiten
 entry.tooltip.showPassword=Passwort anzeigen
 entry.tooltip.generatePassword=Erstelle Zufallspasswort
 entry.tooltip.copyPassword=Passwort in Zwischenablage kopieren
+
+changeMasterPassword.title=Masterpasswort ändern
+changeMasterPassword.header=Hier kannst du dein Masterpasswort ändern
+changeMasterPassword.promptText1=Passwort
+changeMasterPassword.promptText2=Passwort wiederholen
+changeMasterPassword.label=Passwort: 
+changeMasterPasswqord.labelError=Passwörter nicht gleich 
