--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
@@ -1,17 +1,15 @@
 button.finance=Finance
 button.social=Social
 button.email=E-Mail
-button.network=Network
+button.network=Others
 button.recycle=Recycle
 button.settings=Options
 button.newEntry=NEW Entry
 promptText.search=Search...
 menu.file=File
 menu.edit=Edit
-menu.help=Help
 menuItem.newMasterPassword=New MasterPassword
 menuItem.newEntry=New Entry
-menuItem.help=Help
 menuItem.about=About
 contextMenu.delete=Delete
 contextMenu.edit=Edit
@@ -27,6 +25,7 @@ textField.settings.saveSatusText=Save status:
 textField.settings.error=Error
 textField.settings.success=Success
 textField.settings.saveStatus=No Changes
+textField.settings.description = Only Numbers 1-30
 button.settings.numberBackupEntries= SAVE
 button.settings.timeoutClipboard= SAVE
 button.settings.lengthRandomPassword= SAVE
@@ -37,9 +36,8 @@ tableColumn.url=URL
 tableColumn.description=Description
 
 title.about=About
-text.about=jPasswortBunker was created by: \n Marcel Eglseder, Günther Wagenhuber and Michael Kopp \nhttp://www.jpasswortbunker.org \nCopyright 2017 - 2099
-title.help=Help
-text.help=Use Google or ask your Administrator
+text.about=jPasswortBunker was created by: \n Marcel Eglseder, Günther Wagenhuber and Michael Kopp \nhttp://www.jpasswortbunker.org \n© Copyright 2017-2018
+
 
 login.title=LoginScreen
 login.infoText=Unlock your JPasswortBunker
@@ -66,3 +64,10 @@ entryEdit.label.entryHead=Edit Entry
 entry.tooltip.showPassword=Show Password
 entry.tooltip.generatePassword=Generate a random Password
 entry.tooltip.copyPassword=Copy password to clipboard
+
+changeMasterPassword.title=Change Masterpassword
+changeMasterPassword.header=You can change your Masterpassword
+changeMasterPassword.promptText1=Password
+changeMasterPassword.promptText2=RepeatPassword
+changeMasterPassword.label=Password: 
+changeMasterPasswqord.labelError=Password not equals
