ExitButton hinzugefügt Fehler nach ChangeMasterPasswort behoben

--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_de.properties
@@ -9,6 +9,7 @@ promptText.search=Suchen...
 menu.file=Datei
 menu.edit=Bearbeiten
 menuItem.newMasterPassword=Neues Masterpasswort
+menuItem.exit=Exit
 menuItem.newEntry=Neuer Eintrag
 menuItem.about=Info
 contextMenu.delete=Löschen
