--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/bundles/LangBundle_en.properties
@@ -9,6 +9,7 @@ promptText.search=Search...
 menu.file=File
 menu.edit=Edit
 menuItem.newMasterPassword=New MasterPassword
+menuItem.exit=Exit
 menuItem.newEntry=New Entry
 menuItem.about=About
 contextMenu.delete=Delete
